--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,14 +1,13 @@
-FROM node:11-alpine
-
+FROM node:10
 RUN mkdir -p /usr/src/api
 RUN mkdir -p /usr/src/network
 
 WORKDIR /usr/src/api
-
-COPY . .
+COPY package*.json /usr/src/api/
 
 RUN npm install
 
+COPY . .
 EXPOSE 3000
 
 CMD ["npm", "run", "start"]
