--- a/webui/package.json
+++ b/webui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "paper-dashboard-react",
+  "name": "citizenpulse-react",
   "version": "1.2.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
+  "homepage": "",
   "dependencies": {
     "bootstrap": "^4.2.1",
     "chart.js": "2.9.3",
