added mongo container for user vote persistence
Signed-off-by: hritikgupta <hritikgupta9@gmail.com>

--- a/network/docker/docker-compose-api.yaml
+++ b/network/docker/docker-compose-api.yaml
@@ -13,5 +13,11 @@ services:
       - ../../api/:/usr/src/api/
       - ../../network:/usr/src/network/
       - /usr/src/api/node_modules
-
     network_mode: "host"
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
