--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^2.2.0",
     "log4js": "^6.2.0",
     "nodemon": "^2.0.4",
-    "npm": "^6.14.6"
+    "npm": "^6.14.6",
+    "mongoose": "^5.9.27"
   }
 }
