changes to scripts, updated readme
Signed-off-by: hritikgupta <hritikgupta9@gmail.com>

--- a/network/docker/docker-compose-api.yaml
+++ b/network/docker/docker-compose-api.yaml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   api:
-    image: apicont:latest
+    image: citizenpulse-api:latest
     build:
       context: ../../api/
       dockerfile: Dockerfile
