--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -24,9 +25,10 @@
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.20",
     "log4js": "^6.2.0",
+    "mongoose": "^5.9.27",
     "nodemon": "^2.0.4",
-    "npm": "^6.14.6",
-    "mongoose": "^5.9.27"
+    "npm": "^6.14.6"
   }
 }
