--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "encoding": "^0.1.13",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
     "express-jwt": "^5.3.3",
@@ -24,6 +25,7 @@
     "http": "0.0.1-security",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.1.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.20",
     "log4js": "^6.2.0",
