--- a/webui/package.json
+++ b/webui/package.json
@@ -49,7 +49,15 @@
     "typescript": "3.9.5"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.0.4",
     "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.8"
+    "gulp-append-prepend": "1.0.8",
+    "identity-obj-proxy": "^3.0.0"
+  },
+  "jest": {
+    "verbose": true,
+    "moduleNameMapper": {
+      "\\.(scss|less)$": "<rootDir>/config/CSSStub.js"
+    }
   }
 }
