--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.20",
     "log4js": "^6.2.0",
     "mongoose": "^5.9.27",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "npm": "^6.14.6"
   }
