--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,3 +17,22 @@ jobs:
           bash binaries.sh -s
           cd network
           bash generate.sh projectUp
+
+        # - name: Generate coverage report
+      # run:
+      # |
+      #   pip install pytest
+      #   pip install pytest-cov
+      #   pytest --cov=./ --cov-report=xml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1.0.5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          files: ./coverage1.xml,./coverage2.xml
+          directory: ./coverage/reports/
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
+          path_to_write_report: ./coverage/codecov_report.gz
+          verbose: true
